--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,8 @@
     "no-return-assign": 0,
     "class-methods-use-this": 0,
     "no-new": 0,
-    "treatUndefinedAsUnspecified": false
+    "no-undef": 0,
+    "no-unused-vars": 0,
+    "consistent-return": 0
   }
 }
