--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "http-server dist",
     "build-serve": "npm run build && npm run serve",
     "test": "karma start",
-    "e2e": "codeceptjs run --steps"
+    "e2e": "codeceptjs run --steps",
+    "build-image": "node sharp.js"
   },
   "keywords": [],
   "author": "Muh Deni Setiawan <ds767365@gmail.com>",
@@ -28,6 +29,9 @@
     "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^4.2.0",
     "karma": "^5.2.3",
@@ -40,8 +44,10 @@
     "puppeteer": "^20.3.0",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
+    "sharp": "^0.32.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0",
@@ -51,6 +57,7 @@
     "axios": "^1.4.0",
     "flatpickr": "^4.6.13",
     "idb": "^7.1.1",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.9",
     "sweetalert2": "^11.7.3"
   },
